--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.1.2",
+    "weather-react-icons": "^4.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -43,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.20",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0"
   }
 }
