--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
     "react": "^17.0.2",
-    "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
+    "react-google-autocomplete": "^2.6.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
